# internal/apiserver/docs/swagger.json
@@ -3042,6 +3042,15 @@
             "properties": {
                 "access_token": {
                     "type": "string"
+                },
+                "expected_audience": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "expected_issuer": {
+                    "type": "string"
                 }
             }
         },
@@ -3277,6 +3286,18 @@
                 "account_id": {
                     "description": "账户 ID",
                     "type": "string"
+                },
+                "amr": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "attributes": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "expires_at": {
                     "description": "过期时间",
